[package]
name = "ao-sys"
version = "0.1.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to ao."
documentation = "https://docs.rs/ao-sys"
homepage = "https://github.com/stainless-steel/ao-sys"
repository = "https://github.com/stainless-steel/ao-sys"
build = "build.rs"
links = "ao"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
